Fix navbar alignment and adjust margin for placeholder

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ footer {
 }
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 8px 48px 48px 8px ;
     
 }
@@ -30,6 +30,7 @@ ul {
     padding: 0;
     display: flex;
     gap: 16px;
+    align-items: center;
 }
 .navbar h1 {
     margin: 0 ;
@@ -50,7 +51,7 @@ ul {
     align-items: center;
     background-color: gray;
     color: white;
-    margin: 0 0 48px 0;
+    margin: 0 0 48px -64px;
     height: 200px;
 }
 .wrapper {
